# python_package

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  merge_to_main.yml  pull_request_to_main.yml
python_package/: main.py
tests/: test_get_df.py
